Perkin-UAT/force-app/main/default/objects/Support__c/Support__c.object-meta.xml
<CustomObject>
    <description>Contact support</description>
    <label>Support</label>
    <nameField>
        <displayFormat>PKI-{00000000}</displayFormat>
        <label>Support Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Support</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>