Perkin-UAT/force-app/main/default/objects/Support__c/fields/Current_User_to_mirror__c.field-meta.xml
<CustomField>
    <fullName>Current_User_to_mirror__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Enter existing salesforce.com user account to mirror for the new account creation</inlineHelpText>
    <label>Current User to mirror</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Support3</relationshipName>
    <type>Lookup</type>
</CustomField>