Perkin-UAT/force-app/main/default/objects/Support__c/fields/HelpDesk_Email__c.field-meta.xml
<CustomField>
    <fullName>HelpDesk_Email__c</fullName>
    <formula>Office_Location__r.HelpDesk_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HelpDesk Email</label>
    <type>Text</type>
</CustomField>