Perkin-UAT/force-app/main/default/objects/Support__c/fields/HelpDesk_Phone__c.field-meta.xml
<CustomField>
    <fullName>HelpDesk_Phone__c</fullName>
    <formula>Office_Location__r.DayTime_Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HelpDesk Phone</label>
    <type>Text</type>
</CustomField>