Perkin-UAT/force-app/main/default/objects/Support__c/fields/New_User_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>New_User_Email_ID__c</fullName>
    <description>A Valid PerkinElmer user ID is required</description>
    <label>New User Email ID</label>
    <type>Email</type>
</CustomField>