Perkin-UAT/force-app/main/default/objects/Support__c/fields/New_User_Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>New_User_Employee_ID__c</fullName>
    <inlineHelpText>A valid employee ID is required for salesforce.com account creation</inlineHelpText>
    <label>New User Employee ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>