Perkin-UAT/force-app/main/default/objects/Support__c/fields/Office_Location__c.field-meta.xml
<CustomField>
    <fullName>Office_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Office location</description>
    <inlineHelpText>Select your office location</inlineHelpText>
    <label>Office Location</label>
    <referenceTo>ITHelpDesk_Contacts__c</referenceTo>
    <relationshipLabel>Support</relationshipLabel>
    <relationshipName>Support</relationshipName>
    <type>Lookup</type>
</CustomField>