Perkin-UAT/force-app/main/default/objects/Support__c/fields/Problem_type__c.field-meta.xml
<CustomField>
    <fullName>Problem_type__c</fullName>
    <label>Problem Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Business Related</fullName>
            </value>
            <value>
                <fullName>General and Other issues</fullName>
            </value>
            <value>
                <fullName>Mobile Salesforce.com</fullName>
            </value>
            <value>
                <fullName>New User Request</fullName>
            </value>
            <value>
                <fullName>Reports and Dashboards</fullName>
            </value>
            <value>
                <fullName>Salesforce.com How-Tos</fullName>
            </value>
            <value>
                <fullName>Sales functionality</fullName>
            </value>
            <value>
                <fullName>Service functionality</fullName>
            </value>
            <value>
                <fullName>Technical Issue</fullName>
            </value>
            <value>
                <fullName>User Reactivation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>