Perkin-UAT/force-app/main/default/objects/Support__c/fields/Username_to_Reactivate__c.field-meta.xml
<CustomField>
    <fullName>Username_to_Reactivate__c</fullName>
    <label>Username to Reactivate</label>
    <type>Email</type>
</CustomField>