Perkin-UAT/force-app/main/default/objects/Support__c/validationRules/GBL_GBL_Support_newuser_fields_populated.validationRule-meta.xml
<ValidationRule>
    <fullName>GBL_GBL_Support_newuser_fields_populated</fullName>
    <active>true</active>
    <errorConditionFormula>OR(AND( ISPICKVAL( Problem_type__c,&#39;New User Request&#39;), ISBLANK( New_User_Email_ID__c ) ) , 
AND(NOT( ISBLANK( New_User_Email_ID__c )) , NOT(ISPICKVAL( Problem_type__c,&#39;New User Request&#39;))) )</errorConditionFormula>
    <errorMessage>V.RULE_SUPPORT_001: IF &#39;problem type&#39; is New User Request, ensure &#39;New User Creation Details&#39; section is populated. Otherwise leave it blank.</errorMessage>
</ValidationRule>