Perkin-UAT/force-app/main/default/objects/Support__c/listViews/ARQ_000739_Support.listView-meta.xml
<ListView>
    <fullName>ARQ_000739_Support</fullName>
    <filterScope>Queue</filterScope>
    <label>SupportGroup</label>
    <queue>ARQ_000670</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>