Perkin-UAT/force-app/main/default/objects/Support__c/listViews/My_Submitted_tickets.listView-meta.xml
<ListView>
    <fullName>My_Submitted_tickets</fullName>
    <columns>NAME</columns>
    <columns>HelpDesk_Email__c</columns>
    <columns>Status__c</columns>
    <columns>Problem_type__c</columns>
    <columns>LAST_ACTIVITY</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>My Submitted tickets to IT HelpDesk</label>
    <language>en_US</language>
</ListView>